--- a/cakes.css
+++ b/cakes.css
@@ -90,6 +90,10 @@ p {
     margin-top: 30px;
 }
 
+.nevbar .class a {
+    color: #E5BF4A;
+}
+
 .nevigation ul li {
     margin: 0px 14px;
     list-style: none;
